fix: layout problems on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -118,6 +118,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    box-sizing: border-box;
     width: 100vw;
     max-width: 100%;
     margin: 0;
@@ -128,6 +129,16 @@
 
 .intro > h2, .intro > p {
     max-width: 75%
+}
+
+/* Reduce padding on mobile */
+@media (max-width: 1200px) {
+    .intro {
+        padding: 1em 1.5em 1em 1.5em;
+    }
+    .intro > h2, .intro > p {
+        max-width: 100%;
+    }
 }
 
 /* Make about occupy whole screen
